[package]
name = "teisuu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
zone = "0.3.1"
tokio = { version = "1.47.1", features = ["full"] }
inquire = "0.7.5"
nom = "8.0"
itertools = "0.14"
owo-colors = "4"
serde = { version =  "1.0", features = ["derive"] }
serde-xml-rs = "0.8"
topo_sort = "0.4"
futures = "0.3.31"
