[package]
name = "renzokutai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
zone = "0.3.1"
tokio = { version = "1.47.1", features = ["full"] }
inquire = "0.7.5"
nom = "8.0"
itertools = "0.14"
owo-colors = "4"
serde = { version =  "1.0", features = ["derive"] }
serde-xml-rs = "0.8"
topo_sort = "0.4"
futures = "0.3.31"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
doors = "0.8.1"
clap = { version = "4.5.47", features = ["derive"] }
rand = "0.8"
askama = "0.14.0"
tower-http = { version = "0.6.6", features = ["fs"] }
git2 = "0.20.2"	
